test/error/MethodPrivateAbstract.fu
public abstract class Test
{
	abstract bool Run(); //ERROR: Private method cannot be abstract
}
